# altred

./: .editorconfig  .gitignore  README.md
microservices/user-management/backend/: .devcontainer  .env  Cargo.toml  Dockerfile  Dockerfile.Distroless  Dockerfile.Static  Procfile  diesel.toml
microservices/user-management/backend/.devcontainer/: devcontainer.json
microservices/user-management/backend/deploy/local/: docker-compose.yml
microservices/user-management/backend/deploy/local/pgadmin/: servers.json
microservices/user-management/backend/migrations/2021-09-25-194505_add_user/: up.sql
microservices/user-management/backend/src/: main.rs  server.rs
microservices/user-management/backend/src/controller/: mod.rs  server.rs  signup_controller.rs
microservices/user-management/backend/src/controller/converter/: mod.rs  user_converter.rs  user_sign_up_converter.rs  user_to_sign_up_converter.rs
microservices/user-management/backend/src/controller/dtos/: user_dto.rs  user_sign_up_dto.rs
microservices/user-management/backend/src/controller/endpoints/: mod.rs  sign_up.rs  sign_up_endpoint.rs
microservices/user-management/backend/src/controller/entities/: mod.rs  user_sign_up_dto.rs
microservices/user-management/backend/src/di/: di_container.rs  mod.rs
microservices/user-management/backend/src/domain/: mod.rs
microservices/user-management/backend/src/domain/entities/: mod.rs  user.rs  (+1 more)
microservices/user-management/backend/src/persistence/: connection.rs  connection_pool.rs  migrator.rs  mod.rs
microservices/user-management/backend/src/src/: schema.rs
(+107 files in other folders)
