[package]
name = "user-management"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/MatthiasDrexler/altred"
license-file = "../../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

[dev-dependencies]
spectral = "0.6.0"
