[package]
name = "user-management"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/MatthiasDrexler/altred"
license-file = "../../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
autowire_derive = {path = "../../../libraries/autowire_derive"}
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.130"
waiter_di = { version = "1.6.5", features = ["async"] }

[dev-dependencies]
spectral = "0.6.0"
mockall = "0.10.2"
